Added boxscore component

--- a/web/src/components/boxscore/boxscore.component.scss
+++ b/web/src/components/boxscore/boxscore.component.scss
@@ -1,3 +1,12 @@
 .teamIcon {
   height: 75px;
 }
+
+.table {
+  margin-bottom: 0px;
+
+  .th {
+    vertical-align: middle;
+    border-top: none;
+  }
+}
