--- a/web/src/components/teamItem/teamItem.component.scss
+++ b/web/src/components/teamItem/teamItem.component.scss
@@ -1,3 +1,11 @@
-.teamItem div {
-  margin: auto
+.teamItem {
+  div {
+    text-align: center;
+  }
+
+  .score {
+    line-height: 5;
+    display: inline-block;
+    vertical-align: middle;
+  }
 }
