Added css to news tab. Fixed date issue for article controller

--- a/web/src/components/article/article.component.scss
+++ b/web/src/components/article/article.component.scss
@@ -1,4 +1,11 @@
 #article-paragraphs {
+  -webkit-column-count: 3; /* Chrome, Safari, Opera */
+  -moz-column-count: 3; /* Firefox */
+  column-count: 3;
+ 
+  -webkit-column-gap: 40px; /* Chrome, Safari, Opera */ 
+  -moz-column-gap: 40px; /* Firefox */ 
+  column-gap: 40px; 
   padding: 15px;
     p {
     text-align: justify;
