--- a/web/src/components/scheduleItem/scheduleItem.component.scss
+++ b/web/src/components/scheduleItem/scheduleItem.component.scss
@@ -2,10 +2,11 @@
   margin: 10px 0;
 
   .card {
-    height: 100%
+    height: 100%;
   }
 
-  a, a:hover {
+  a,
+  a:hover {
     color: inherit;
     text-decoration: none;
   }
@@ -26,7 +27,7 @@
   height: 55px;
   margin: 0 10px;
 
-  @media screen and (max-width:420px) {
+  @media screen and (max-width: 420px) {
     font-size: 45px;
   }
 }
@@ -36,7 +37,7 @@
   font-size: 0.9em;
   padding-bottom: 10px;
 
-  @media screen and (max-width:420px) {
+  @media screen and (max-width: 420px) {
     font-size: 3.5vw;
   }
 }
@@ -53,7 +54,7 @@
   border-top: 1px solid #dedede;
   padding-top: 10px;
 
-  @media screen and (max-width:420px) {
+  @media screen and (max-width: 420px) {
     font-size: 3.5vw;
   }
 }
