--- a/web/src/components/teamStats/teamStats.component.scss
+++ b/web/src/components/teamStats/teamStats.component.scss
@@ -10,7 +10,6 @@
   cursor: pointer;
 
   :hover {
-
   }
 
   .active {
@@ -18,15 +17,15 @@
   }
 }
 
-Table {
+table {
   th {
     text-align: center;
 
-    @media screen and (max-width:420px) {
+    @media screen and (max-width: 420px) {
       font-size: 3vw;
     }
   }
-  
+
   .value {
     font-weight: normal;
   }
