--- a/web/src/components/teamStats/teamStats.component.scss
+++ b/web/src/components/teamStats/teamStats.component.scss
@@ -1,9 +1,13 @@
 .teamStats {
   padding-top: 1.3em;
+
+  .statsCard {
+    overflow-x: scroll;
+  }
 }
 
 .item {
-  width: 50%;
+  width: 25%;
   border: 1px solid #d6d6d6;
   border-top-left-radius: 4px;
   border-top-right-radius: 4px;
