--- a/web/src/components/game/game.component.scss
+++ b/web/src/components/game/game.component.scss
@@ -21,6 +21,10 @@
     text-align: center;
     margin: 0.5em auto;
   }
+
+  @media screen and (max-width: 420px) {
+    font-size: 1em;
+  }
 }
 
 .sectionLink {
