--- a/web/src/components/schedule/schedule.component.scss
+++ b/web/src/components/schedule/schedule.component.scss
@@ -1,9 +1,11 @@
 .schedule {
-  background-color: #f0f0f0;
   margin-top: 3em;
+  color: #fff;
 }
 
 .scheduleContainer {
+  display: flex;
+  flex-direction: column;
   margin-top: 10px;
 }
 
