--- a/src/bulma-components/Schedule/gameCard.scss
+++ b/src/bulma-components/Schedule/gameCard.scss
@@ -8,18 +8,18 @@
     0 0px 0 1px rgba(10, 10, 10, 0.02);
 }
 
-figure {
-  // margin: 0.5rem 0 1.5rem 0;
-}
-
 .period {
-  width: 50%;
-  padding: 0.5rem 0;
-  background-color: #818181;
-  color: #fff;
+  margin-top: -4.5rem;
 
-  &.active {
-    background-color: #d91414;
-    font-weight: bold;
+  .container {
+    width: 50%;
+    padding: 0.5rem 0;
+    background-color: #818181;
+    color: #fff;
+
+    &.active {
+      background-color: #d91414;
+      font-weight: bold;
+    }
   }
 }
